src/objects/LG_AddressValidationSetup__mdt.object
<CustomObject>
    <description>This object contains all the setup data related to address validation funtionality</description>
    <fields>
        <fullName>LG_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DisplayConfiguration__c</fullName>
        <defaultValue>&apos;addressResultsAllFields&apos;</defaultValue>
        <inlineHelpText>Please enter the Label which contains the Salesforce to JSON Payload Metadata configuration.</inlineHelpText>
        <label>Display Configuration</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_FieldSetName__c</fullName>
        <inlineHelpText>Enter field set API name related to the selected object applicable for selected country</inlineHelpText>
        <label>Field Set Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address Validation Setup</label>
    <pluralLabel>Address Validation Setup</pluralLabel>
</CustomObject>